[project]
name = "openreview-finder"
version = "0.1.0"
description = "Semantic search for ICLR papers"
requires-python = ">=3.9"
dependencies = [
    "openreview-py>=1.0.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "click>=8.0.0",
    "chromadb>=0.4.0",
    "transformers>=4.20.0",
    "torch>=1.10.0",
    "sentence-transformers>=2.2.0",
    "tenacity>=8.0.0",
    "scikit-learn>=1.0.0",
    "tabulate>=0.8.0",
    "peft>=0.15.1",
    "adapters>=1.1.1",
]

[project.scripts]
openreview-finder = "openreview_finder.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
