[project]
name = "openreview-finder"
version = "1.0.0"
description = "Semantic search for NeurIPS papers using SPECTER2 embeddings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dan MacKinlay", email = "dan.mackinlay@csiro.au"},
]
dependencies = [
    "openreview-py>=1.0.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "click>=8.0.0",
    "chromadb~=1.0.0",
    "transformers>=4.00.0,<5.0.0",
    "torch>=2.1.0,<3.0.0",
    "sentence-transformers>=4.0.0,<5.0.0",
    # "tenacity>=8.0.0",
    "scikit-learn>=1.0.0",
    "tabulate>=0.8.0",
    "peft~=0.15.1",
    "adapters~=1.1.1",
    "diskcache>=5.6.3",
    "gradio>=5.0.0,<6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/danmackinlay/openreview_finder"
"Author" = "https://danmackinlay.name"
"Organization" = "https://www.csiro.au/"

[project.scripts]
openreview-finder = "openreview_finder:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"